--- a/Army.html
+++ b/Army.html
@@ -8,7 +8,7 @@
     </head>
     <body class=bge>
         <ul class="nav">
-            <li><a href="About.html">About</a></li><li><a href="History.html">History</a></li><li><a href="Royal_Family.html">Royal Siblings</a></li><li><a href="Army.html">Army</a></li><li><a href="Index.html">Renais</a></li>
+            <li><a href="About.html">About</a></li><li><a href="History.html">History</a></li><li><a href="Royal_Family.html">Royal Siblings</a></li><li><a href="Army.html">Army</a></li><li><a href="index.html">Renais</a></li>
         </ul>
     <div id="container">
         <div class="gallery">
