--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body class=bg>
         <ul class="nav">
-            <li><a href="About.html">About</a></li><li><a href="History.html">History</a></li><li><a href="Royal_Family.html">Royal Siblings</a></li><li><a href="Army.html">Army</a></li><li><a href="Index.html">Renais</a></li>
+            <li><a href="About.html">About</a></li><li><a href="History.html">History</a></li><li><a href="Royal_Family.html">Royal Siblings</a></li><li><a href="Army.html">Army</a></li><li><a href="index.html">Renais</a></li>
         </ul>
         <div class="text-block">
             <p>This is a website dedicated to the Kingdom of Renais from the game: Fire Emblem: Sacred Stones.</p>
